# esp32sensors

./: CMakeLists.txt  README.md  sdkconfig
components/BME280/: Adafruit_BME280.cpp  CMakeLists.txt
components/BME280/include/: Adafruit_BME280.h
components/MAX1704x/: CMakeLists.txt  SMAX1704x_Fuel_Gauge.cpp
components/MAX1704x/include/: SMAX1704x_Fuel_Gauge.h
components/SHT31/: ASHT31.cpp
main/: AppTask.cpp  CMakeLists.txt  Kconfig.projbuild  SMAX1704x_Fuel_Gauge.cpp  main.cpp  wifi_t.cpp
main/include/: AppEvent.h  AppTask.h  wifi_t.h
